; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_test_checkout_tree__calls_progress_callback.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_test_checkout_tree__calls_progress_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32 }

@progress = common dso_local global i32 0, align 4
@g_opts = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@g_object = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"master\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_tree__calls_progress_callback() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @progress, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_opts, i32 0, i32 1), align 8
  store i32* %1, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_opts, i32 0, i32 0), align 8
  %3 = load i32, i32* @g_repo, align 4
  %4 = call i32 @git_revparse_single(i32* @g_object, i32 %3, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @g_repo, align 4
  %7 = load i32, i32* @g_object, align 4
  %8 = call i32 @git_checkout_tree(i32 %6, i32 %7, %struct.TYPE_3__* @g_opts)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @cl_assert_equal_i(i32 %10, i32 1)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revparse_single(i32*, i32, i8*) #1

declare dso_local i32 @git_checkout_tree(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
